# Mimonitor_Toolbox

./: .gitignore  README.md  build.bat  build_2025.bat  monitor_controller.py
.github/workflows/: build.yml
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: copy-adb.js  download-adb.js
web/server/: adb.js  index.js  package.json
web/server/routes/: connect.js  display.js  settings.js
web/src/: App.vue  main.js
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: main.rs
web/src/api/: index.js
web/src/composables/: useAdb.js
web/src/styles/: glass.css
web/src/views/: About.vue  Home.vue  Picture.vue  Source.vue  Tools.vue
